--- a/package.json
+++ b/package.json
@@ -6,8 +6,19 @@
     "dev": "nodemon -L --watch src/**/*.* --exec \"npm run build\""
   },
   "dependencies": {
+    "@alt1/ability": "^1.0.0-alpha.6",
+    "@alt1/abilitytooltip": "^1.0.0-alpha.6",
+    "@alt1/animal": "^1.0.0-alpha.6",
     "@alt1/base": "^1.0.0-alpha.2",
+    "@alt1/bosstimer": "^1.0.0-alpha.6",
+    "@alt1/buffs": "^1.0.0-alpha.6",
     "@alt1/chatbox": "^1.0.0-alpha.3",
+    "@alt1/datapng-loader": "^1.0.0-alpha.6",
+    "@alt1/dialog": "^1.0.0-alpha.6",
+    "@alt1/dropsmenu": "^1.0.0-alpha.6",
+    "@alt1/font-loader": "^0.0.17",
+    "@alt1/ocr": "^1.0.0-alpha.6",
+    "@alt1/targetmob": "^1.0.0-alpha.6",
     "@alt1/tooltip": "^1.0.0-alpha.6"
   },
   "devDependencies": {
